@@ -156,6 +156,14 @@ nm_editor_utils_get_connection_type_list(void)
     item->id_format         = _("Veth connection %d");
     g_ptr_array_add(array, item);
 
+    item                    = g_new0(NMEditorConnectionTypeDataReal, 1);
+    item->data.name         = _("Loopback");
+    item->data.setting_type = NM_TYPE_SETTING_LOOPBACK;
+    item->data.device_type  = NM_TYPE_DEVICE_LOOPBACK;
+    item->data.virtual      = TRUE;
+    item->id_format         = _("Loopback connection %d");
+    g_ptr_array_add(array, item);
+
     item                        = g_new0(NMEditorConnectionTypeDataReal, 1);
     item->data.name             = _("Wi-Fi");
     item->data.setting_type     = NM_TYPE_SETTING_WIRELESS;
