@@ -95,6 +95,7 @@ static const char *device_sort_order[]   = {"NMDeviceEthernet",
                                             "NMDeviceVeth",
                                             "NMDeviceInfiniband",
                                             "NMDeviceWifi",
+                                            "NMDeviceLoopback",
                                             NM_SETTING_VLAN_SETTING_NAME,
                                             NM_SETTING_VETH_SETTING_NAME,
                                             NM_SETTING_BOND_SETTING_NAME,
