@@ -14,6 +14,7 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Add a new "prefix-delegation" setting containing a "subnet-id"
   property that specifies the subnet to choose on the downstream
   interface when using IPv6 prefix delegation.
+* Add support for configuring the loopback interface in nmtui.
 
 =============================================
 NetworkManager-1.52
